Reporte Casi Listo
Co-Authored-By: Marco Alonso Rodríguez Villegas <67651562+markorovi@users.noreply.github.com>

--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Incluir la biblioteca HTML2PDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+  <script src="path/to/html2pdf.js"></script>
 
 </head>
 
